--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>QR Code</title>
 
     <link rel="stylesheet" href="styles.css" >
-    <link rel="icon" href="Images/icon.ico">
+      <link rel="icon" href="icon.ico">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
